tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/matrix_in_bool_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/matrix_in_bool_expr/matrix_in_bool_expr.essence:2:11:
  |
2 | such that m /\ true
  |           ^
Type error: Matrix variable 'm' cannot be used in boolean context